--- a/public/index.css
+++ b/public/index.css
@@ -78,18 +78,11 @@ button:hover, input[type="submit"]:hover {
 }
 
 input[type="file"] {
-    display: none;
-}
-
-.custom-file-upload {
-    display: inline-block;
-    padding: 10px 20px;
     color: white;
-    background-color: #000000; /* Customize as desired */
-    border-radius: 5px;
     cursor: pointer;
     font-size: 12px;
     transition: background-color 0.3s;
+    width: 100px;
 }
 
 .form-group small {
