--- a/public/pd.css
+++ b/public/pd.css
@@ -26,7 +26,16 @@ header {
 header .logo {
     font-size: 24px;
     font-weight: bold;
-}
+    width: 100px;
+    height: 100px;
+    background-color: #e5e5e5b9;
+    border-radius: 15px;
+  }
+  
+  .logo img {
+    width: 100%;
+    height: 100%;
+  }
 
 nav {
     display: flex;
