--- a/public/test.css
+++ b/public/test.css
@@ -11,6 +11,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  min-height: 100vh;
 }
 
 /* Layout */
@@ -26,6 +27,20 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+}
+
+header .logo {
+  font-size: 24px;
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+  background-color: #e5e5e5b9;
+  border-radius: 15px;
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
 }
 
 header a {
