--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
-    <link rel="stylesheet" href="../public/test.css">
+    <link rel="stylesheet" href="/test.css">
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../public/images/logo1.png" alt="logo"></div>
+        <div class="logo"><img src="/images/logo1.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
