--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/pd.css">
+    <link rel="stylesheet" href="/pd.css">
     <title>Pet Profiles</title>
 </head>
 <body>
     <header>
-        <div class="logo"><img src="../public/images/logo1.png" alt="logo"></div>
+        <div class="logo"><img src="/images/logo1.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
