--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -60,12 +60,12 @@
                 <a href="/pets/pet-profile/<%= pet._id %>" class="pet-link">
                     <div class="pet-card">
                         <div class="image-container">
-                            <img src="<%= pet.imageURL %>" alt="<%= pet.name %>">
+                            <img src="<%= pet.imageUrl %>" alt="<%= pet.name %>">
                         </div>
                         <div class="pet-info">
                             <h3><%= pet.name %></h3>
                             <hr>
-                            <p><%= pet.age %></p>
+                            <p><%= pet.age %> years old</p>
                             <p><%= pet.gender %></p>
                         </div>
                     </div>
