--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/images/logo1.png" alt="logo"></div>
+        <div class="logo"><img src="/images/logo2.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
-            <a href="/pets/gallery">Gallery</a>
+            <a href="/pets/gallery">Meet Our Pets</a>
         </nav>
     </header>
 
@@ -33,21 +33,21 @@
         <hr>
         <div class="testimonials">
             <div class="testimonial">
+                <h3><b>Emily R.</b></h3>
                 <img src="/images/Testimonial1.jpg" alt="Testimonial 1">
                 <p>"Adopting my dog through this platform was an amazing experience. The process was easy, and I’m so grateful to have found my new best friend. Thank you for making it possible!"</p>
-                <p>- Emily R.</p>
             </div>
     
             <div class="testimonial">
+                <h3><b>James T.</b></h3>
                 <img src="/images/Testimonial2.jpg" alt="Testimonial 2">
                 <p>"This is a fantastic service! I was able to find the perfect cat for my family, and the team at Pet Adoption Platform were so helpful. Our new pet has brought so much joy into our home."</p>
-                <p>- James T.</p>
             </div>
     
             <div class="testimonial">
+                <h3><b>Sarah L.</b></h3>
                 <img src="/images/Testimonial3.jpg" alt="Testimonial 3">
                 <p>"I adopted a senior dog, and the process was straightforward and stress-free. I love how this platform helps animals find the right families, no matter their age!"</p>
-                <p>- Sarah L.</p>
             </div>
         </div>
     </div>
