--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/pd.css">
     <title>Pet Profiles</title>
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/images/logo1.png" alt="logo"></div>
+        <div class="logo"><img src="/images/logo2.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
-            <a href="/pets/gallery">Gallery</a>
+            <a href="/pets/gallery">Meet Our Pets</a>
         </nav>
     </header>
     <div class="container">
@@ -37,6 +38,7 @@
             <h3>Owner Contacts:</h3>
             <p><%= pet.ownerEmail %></p>
             <textarea placeholder="Message:"></textarea>
+            <br>
             <button>Email</button>
         </section>
     </div>
