--- a/public/home.css
+++ b/public/home.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'itim';
+    src: url(/Itim/Itim-Regular.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -5,12 +10,12 @@
 }
 
 body {
-    background-image: url(./images/Background.png);
+    background-image: url(./images/Background.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     min-height: 100vh;
-    font-family: Arial, sans-serif;
+    font-family: 'itim';
 }
 
 /* Header */
@@ -117,6 +122,7 @@ nav a:hover {
     height: 100%;
     object-fit: cover;
     border-radius: 15px;
+    margin: 10px 0px;
 }
 
 .aboutUs {
@@ -160,11 +166,11 @@ hr {
 
 @media (max-width: 600px) {
     body {
-        background-image: url(./images/SmallBackground.png);
+        background-image: url(./images/smallBackground.svg);
     }
 
     nav a, .sign-in {
-        font-size: 16px;
+        font-size: 20px;
     }
     
     nav a {
