--- a/public/pd.css
+++ b/public/pd.css
@@ -1,4 +1,10 @@
 /* Global Styles */
+
+@font-face {
+    font-family: 'itim';
+    src: url(/Itim/Itim-Regular.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -6,8 +12,8 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    background-image: url(./images/Background.png);
+    font-family: 'itim';
+    background-image: url(./images/Background.svg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -187,8 +193,8 @@ hr {
 
 /* Textarea */
 textarea {
-    width: 100%;
-    height: 30vh;
+    width: 95%;
+    height: 25vh;
     padding: 10px;
     background-color: #EEECEC;
     border-radius: 20px;
@@ -196,6 +202,7 @@ textarea {
     resize: none;
     font-family: inherit;
     font-size: inherit;
+    margin-bottom: 10px;
 }
 
 /* Responsive Adjustments */
@@ -273,6 +280,6 @@ textarea {
     }
 
     body {
-        background-image: url(./images/SmallBackground.png);
+        background-image: url(./images/smallBackground.svg);
     }
 }
