--- a/public/test.css
+++ b/public/test.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'itim';
+  src: url(/Itim/Itim-Regular.ttf);
+}
+
 /* Global Styles */
 * {
   margin: 0;
@@ -6,8 +11,8 @@
 }
 
 body {
-  font-family: Arial, sans-serif;
-  background-image: url(./images/Background.png);
+  font-family: 'itim';
+  background-image: url(./images/Background.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -15,6 +20,40 @@ body {
 }
 
 /* Layout */
+
+.search {
+  padding: 10px;
+  text-align: center;
+  width: fit-content;
+  margin: auto;
+}
+
+.search select {
+  background-color: white;
+  border-radius: 10px 20px;
+  padding: 10px;
+  border: rgb(190, 190, 190) 1px solid;
+  cursor: pointer;
+  margin: 0px 5px;
+  font-family: 'itim';
+}
+
+.search button {
+  background-color: #FF9F1C;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin: 0px 5px;
+  font-family: 'itim';
+}
+
+.search button:hover {
+  background-color: #FF8C00;
+}
+
 .container {
   width: 100%;
   max-width: 1200px;
@@ -93,33 +132,6 @@ header a:hover {
   background-color: #ff8c00;
 }
 
-.search, .filter {
-  background-color: #ccc;
-  border: none;
-  padding: 10px 15px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.search {
-  margin-right: 10px;
-}
-
-/* Search Bar */
-.search-bar {
-  display: flex;
-  justify-content: space-between;
-  margin: 0 0 30px 0;
-}
-
-.search-bar input {
-  flex: 1;
-  padding: 10px;
-  margin-right: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
 /* Pet Cards */
 .pet-grid {
   display: grid;
@@ -142,6 +154,7 @@ header a:hover {
   text-align: center;
   padding: 10px;
   transition: transform 0.3s ease;
+  width: 300px;
 }
 
 .pet-card:hover {
@@ -159,14 +172,13 @@ header a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
-  max-height: 200px;
+  max-height: 275px;
   overflow: hidden;
 }
 
 .image-container img {
   width: 100%;
   height: auto;
-  max-height: 200px;
   object-fit: cover;
 }
 
@@ -191,20 +203,19 @@ header a:hover {
   border-radius: 15px;
 }
 
-.more {
-  text-align: center;
-  margin-top: 20px;
-  color: #666;
-  font-size: 16px;
-}
-
 /* Responsive Adjustments */
 @media (max-width: 600px) {
   body {
-    background-image: url(./images/SmallBackground.png);
+    background-image: url(./images/smallBackground.svg);
   }
-  nav a, .sign-in {
-    font-size: 12px;
+
+  header .logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  nav a{
+    font-size: 15px;
   }
 
   nav a {
@@ -212,22 +223,7 @@ header a:hover {
   }
 
   header {
-    padding: 5px;
-  }
-
-  .sign-in {
-    padding: 6px 11px;
-  }
-
-  .search-bar {
-    flex-direction: column;
-    align-items: stretch;
-    gap: 10px;
-  }
-
-  .search, .filter, .search-bar input {
-    width: 100%;
-    margin-bottom: 10px;
+    padding: 10px;
   }
 
   .pet-grid {
@@ -238,7 +234,7 @@ header a:hover {
   }
 
   .pet-card {
-    width: 95%;
+    width: 300px;
     margin: 10px 0;
   }
 
