--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="/test.css">
+    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
-        <div class="logo"><img src="/images/logo1.png" alt="logo"></div>
+        <div class="logo"><img src="/images/logo2.png" alt="logo"></div>
         <nav>
             <a href="/pets">Home</a>
             <a href="/pets/addPet">Add Pet</a>
-            <a href="/pets/gallery">Gallery</a>
+            <a href="/pets/gallery">Meet Our Pets</a>
         </nav>
     </header>
     <div class="container">
-            <form action="/pets/gallery" method="POST">
-                <label for="breed">Breed</label>
+            <form action="/pets/gallery" method="POST" class="search">
                 <select id="breed" name="breed">
-                    <option value="">Select Breed</option>
+                    <option value="">Breed</option>
                     <% 
                         const uniqueBreeds = [...new Set(pets.map(pet => pet.breed))]; 
                         uniqueBreeds.forEach(breed => { 
@@ -28,9 +28,9 @@
                     <% }); %>
                 </select>
             
-                <label for="location">Location</label>
+                
                 <select id="location" name="location">
-                    <option value="">Select Location</option>
+                    <option value="">Location</option>
                     <% 
                         const uniqueLocations = [...new Set(pets.map(pet => pet.location))]; 
                         uniqueLocations.forEach(location => { 
@@ -39,9 +39,8 @@
                     <% }); %>
                 </select>
             
-                <label for="age">Age</label>
                 <select id="age" name="age">
-                    <option value="">Select Age</option>
+                    <option value="">Age</option>
                     <option value="0-3">(0-3 Years)</option>
                     <option value="3-6">(3-6 Years)</option>
                     <option value="6-9">(6-9 Years)</option>
@@ -72,8 +71,6 @@
                 </a>
             <% }); %>
         </div>
-
-        <div class="more">There will be more below</div>
     </div>
 
     
