--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pd.css">
+    <link rel="stylesheet" href="/profile.css">
     <title>Pet Profiles</title>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
@@ -42,5 +42,14 @@
             <button>Email</button>
         </section>
     </div>
+
+    <footer>
+        <form method="POST" action="/pets/">
+            <button>Logout</button>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Furever Friends. All rights reserved.</p>
+            </div>
+        </form>
+    </footer>
 </body>
 </html>
