--- a/public/gallery.css
+++ b/public/gallery.css
@@ -19,6 +19,11 @@ body {
   min-height: 100vh;
 }
 
+body h1 {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
 /* Layout */
 
 .search {
@@ -73,7 +78,7 @@ header .logo {
   font-weight: bold;
   width: 100px;
   height: 100px;
-  background-color: #e5e5e5b9;
+  background-color: #3e635c96;
   border-radius: 15px;
 }
 
@@ -203,6 +208,32 @@ header a:hover {
   border-radius: 15px;
 }
 
+footer {
+  color: black;
+  text-align: center;
+  margin-top: 20px;
+}
+
+footer button {
+  background-color: #FF9F1C;
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 15px;
+}
+
+footer button:hover {
+  background-color: #ff8c00;
+  transition: background-color 0.3s ease;
+}
+
+.footer-bottom {
+  margin: 10px 0px;
+  font-size: 0.9em;
+}
+
 /* Responsive Adjustments */
 @media (max-width: 600px) {
   body {
@@ -219,7 +250,7 @@ header a:hover {
   }
 
   nav a {
-    margin: 0 5px;
+    margin: 0 10px;
   }
 
   header {
