--- a/public/homePage.css
+++ b/public/homePage.css
@@ -32,7 +32,7 @@ header .logo {
     font-weight: bold;
     width: 100px;
     height: 100px;
-    background-color: #e5e5e5b9;
+    background-color: #3e635c96;
     border-radius: 15px;
 }
 
@@ -135,6 +135,11 @@ nav a:hover {
     border-radius: 20px;
 }
 
+.aboutUs h2, .container h2, .testimonial h2 {
+    text-decoration: underline solid 5px #FF9F1C;
+    margin-bottom: 15px;
+}
+
 hr {
     border: 3px solid #ffa500;
     border-radius: 20px;
@@ -148,10 +153,40 @@ hr {
     padding: 2rem;
     border-radius: 20px;
     margin: 10px 20px;
+    flex: 1;
 }
+
+footer {
+    color: black;
+    text-align: center;
+  }
+  
+  footer button {
+    background-color: #FF9F1C;
+    border: none;
+    padding: 10px 20px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 15px;
+  }
+  
+  footer button:hover {
+    background-color: #ff8c00;
+    transition: background-color 0.3s ease;
+  }
+  
+  .footer-bottom {
+    margin: 10px 0px;
+    font-size: 0.9em;
+  }
+  
 
 /* Media query for smaller screens */
 @media (max-width: 768px) {
+    body {
+        font-size: smaller;
+    }
     .testimonials {
         flex-direction: column;
         width: 100%; /* Adjust width to fit the container */
@@ -159,8 +194,13 @@ hr {
     }
 
     .testimonials img {
-        max-width: 80%; /* Make images responsive */
+        max-width: 75%; /* Make images responsive */
         margin-bottom: 20px; /* Add space between images in column layout */
+        max-height: none;
+    }
+
+    .testimonial {
+        width: 80%;
     }
 }
 
@@ -169,8 +209,8 @@ hr {
         background-image: url(./images/smallBackground.svg);
     }
 
-    nav a, .sign-in {
-        font-size: 20px;
+    nav a {
+        font-size: 15px;
     }
     
     nav a {
@@ -186,8 +226,8 @@ hr {
     }
 
     header .logo {
-        width: 75px;
-        height: 75px;
+        width: 50px;
+        height: 50px;
     }
 
     .mainLogo {
