--- a/views/addPet.ejs
+++ b/views/addPet.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Pet</title>
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/form.css">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 <body>
