added simple admin css

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="/admin.css">
 </head>
 <body>
     <h3>Admin Dashboard</h3>
@@ -30,7 +31,6 @@
                     </form>
                 </div>
             </div>
-            <hr>
         <% }); %>
     </div>
     <hr><hr><hr><hr>
@@ -47,11 +47,12 @@
                     </form>
                 </div>
             </div>
-            <hr>
         <% }); %>
     </div>
 
-    <a href="/pets"><button type="submit">Home</button></a>
+    <div id="home">
+        <a href="/pets"><button type="submit">Home</button></a>
+    </div>
 
 </body>
 </html>
